--- a/clash-royale/index.html
+++ b/clash-royale/index.html
@@ -33,11 +33,29 @@
                 </div>
             </div>
             <h2 class="subtitle">Tecnologias</h2>
-             <div class="technologies">
-                <img src="images/1643312603cpp.png" alt="C++">
-                <img src="images/download.png" alt="Java">
-                <img src="images/download (1).png" alt="Redis">
-             </div>
+            <div class="technologies">
+                <div class="tech-card">
+                    <img src="images/1643312603cpp.png" alt="C++">
+                    <div class="tech-info">
+                        <h3>C++</h3>
+                        <p>Utilizado no desenvolvimento do motor do jogo para processamento em tempo real das batalhas, física e renderização gráfica, garantindo alta performance e baixa latência.</p>
+                    </div>
+                </div>
+                <div class="tech-card">
+                    <img src="images/download.png" alt="Java">
+                    <div class="tech-info">
+                        <h3>Java</h3>
+                        <p>Responsável pela lógica do servidor, gerenciamento de jogadores online, sistema de matchmaking e processamento das interações em tempo real entre jogadores.</p>
+                    </div>
+                </div>
+                <div class="tech-card">
+                    <img src="images/download (1).png" alt="Redis">
+                    <div class="tech-info">
+                        <h3>Redis</h3>
+                        <p>Banco de dados em memória utilizado para cache de dados frequentes, ranking de jogadores e gerenciamento de sessões em tempo real.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
