alteração de informações da linha do tmepo

--- a/historia-programacao/index.html
+++ b/historia-programacao/index.html
@@ -80,8 +80,9 @@
                             <div class="timeline-content">
                                 <div class="timeline-text">
                                     <h3>8/16 bits</h3>
-                                    <p>Com o NES, Mega Drive e os computadores domésticos, a programação misturava C e
-                                        assembly. Clássicos como Mario e Sonic surgiram nessa era.
+                                    <p>Com o NES e os computadores domésticos, a programação misturava C e assembly.
+                                        Clássicos como Mario nasceram nessa era. Já no fim da década, o Mega Drive 
+                                        introduziu a era dos 16 bits e personagens como Sonic.
                                     </p>
                                 </div>
                                 <img src="images/sonic.png" class="image-right" alt="Sonic">
@@ -94,8 +95,8 @@
                                 <img src="images/doom.png" class="image-left" alt="Doom">
                                 <div class="timeline-text">
                                     <h3>Chegada do 3D</h3>
-                                    <p>Motores como o id Tech (Doom/Quake) e Unreal Engine mudaram a indústria. C e C++
-                                        dominaram o desenvolvimento.
+                                    <p>Engines como o id Tech (Doom em 1993, Quake em 1996) mudaram a indústria.
+                                        Em 1998 surgiu a Unreal Engine, consolidando o uso de C e C++ no desenvolvimento.
                                     </p>
                                 </div>
                             </div>
@@ -106,8 +107,9 @@
                             <div class="timeline-content">
                                 <div class="timeline-text">
                                     <h3>Engines acessíveis</h3>
-                                    <p>Unity e Unreal se tornaram acessíveis. Jogos online e multiplataforma cresceram,
-                                        e equipes começaram a se especializar.
+                                    <p>Unity, lançada em 2005, democratizou o desenvolvimento de jogos para indies. 
+                                        Unreal foi se tornando acessível com o tempo, mas jogos online e multiplataforma cresceram 
+                                        e as equipes começaram a se especializar.
                                     </p>
                                 </div>
                                 <img src="images/unity-unreal.png" class="image-right" alt="Unity e Unreal">
