modificações na página de história da programação

--- a/historia-programacao/index.html
+++ b/historia-programacao/index.html
@@ -59,7 +59,7 @@
                                         1962 Spacewar! Programação feita em baixo nível, diretamente no hardware.
                                     </p>
                                 </div>
-                                <img src="images/space-invader.png" class="image-right" alt="Space Invaders">
+                                <img src="images/spacewar.png" class="image-right" alt="Spacewar">
                             </div>
                         </div>
 
