tela inicial que redireciona para os jogos

--- a/rocket-league/index.html
+++ b/rocket-league/index.html
@@ -10,12 +10,12 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/rocket-league/images/logo-games.png" alt="Logo Games">
+                <img src="images/logo-games.png" alt="Logo Games">
             </div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#programacao">Programação</a></li>
+                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="../historia-programacao/index.html">Programação</a></li>
                     <li><a href="#sobre-nos">Sobre Nós</a></li>
                 </ul>
             </nav>
