--- a/clash-royale/index.html
+++ b/clash-royale/index.html
@@ -10,12 +10,12 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/clash-royale/images/logo-games.png" alt="Logo Games">
+                <img src="images/logo-games.png" alt="Logo Games">
             </div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Início</a></li>
-                    <li><a href="#programacao">Programação</a></li>
+                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="../historia-programacao/index.html">Programação</a></li>
                     <li><a href="#sobre-nos">Sobre Nós</a></li>
                 </ul>
             </nav>
@@ -37,7 +37,9 @@
                     </div>
                 </div>
             </div>
-            <h2 class="subtitle">Tecnologias</h2>
+        </section>
+        <section class="technologies-container">
+            <h2 class="subtitle">Tecnologias do Clash Royale</h2>
             <div class="technologies">
                 <div class="tech-card">
                     <img src="images/1643312603cpp.png" alt="C++">
