--- a/historia-programacao/index.html
+++ b/historia-programacao/index.html
@@ -12,12 +12,12 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/clash-royale/images/logo-games.png" alt="Logo Games">
+                <img src="../rocket-league/images/logo-games.png" alt="Logo Games">
             </div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Início</a></li>
-                    <li><a href="#programacao">Programação</a></li>
+                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="index.html">Programação</a></li>
                     <li><a href="#sobre-nos">Sobre Nós</a></li>
                 </ul>
             </nav>
