adição do card do fortnite

--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
                     <span class="tag">Estratégia</span>
                 </div>
             </div>
+
+            <div class="game-card" onclick="window.location.href='clash-royale/index.html'">
+                <img src="clash-royale/images/clashroyale-android-ios-review.jpg" alt="Clash Royale" />
+                <div class="overlay">
+                    <h3>Fortnite</h3>
+                    <p>Battle Royale com estratégia. Engine: Unreal Engine</p>
+                    <span class="tag">Battle Royale</span>
+                </div>
+            </div>
         </div>
     </section>
 
