--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="rocket-league/images/logo-games.png" alt="Logo Games">
+                <img src="../rocket-league/images/logo-games.png" alt="Logo Games">
             </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Início</a></li>
-                    <li><a href="../historia-programacao/index.html">Programação</a></li>
-                    <li><a href="#sobre-nos">Sobre Nós</a></li>
+                    <li><a href="../historia-programacao/index.html">História</a></li>
+                    <li><a href="../index.html#sobre">Sobre Nós</a></li>
                 </ul>
             </nav>
         </div>
@@ -134,8 +134,8 @@
                 </div>
             </div>
 
-            <div class="game-card" onclick="window.location.href='clash-royale/index.html'">
-                <img src="clash-royale/images/clashroyale-android-ios-review.jpg" alt="Clash Royale" />
+            <div class="game-card" onclick="window.location.href='/fortnite/index.html'">
+                <img src="fortnite/images/fornite.jpg" alt="Fortnite" />
                 <div class="overlay">
                     <h3>Fortnite</h3>
                     <p>Battle Royale com estratégia. Engine: Unreal Engine</p>
