--- a/clash-royale/index.html
+++ b/clash-royale/index.html
@@ -10,13 +10,13 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="images/logo-games.png" alt="Logo Games">
+                <img src="../rocket-league/images/logo-games.png" alt="Logo Games">
             </div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Início</a></li>
-                    <li><a href="../historia-programacao/index.html">Programação</a></li>
-                    <li><a href="#sobre-nos">Sobre Nós</a></li>
+                    <li><a href="../historia-programacao/index.html">História</a></li>
+                    <li><a href="../index.html#sobre">Sobre Nós</a></li>
                 </ul>
             </nav>
         </div>
