--- a/rocket-league/index.html
+++ b/rocket-league/index.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Início</a></li>
-                    <li><a href="../historia-programacao/index.html">Programação</a></li>
-                    <li><a href="#sobre-nos">Sobre Nós</a></li>
+                    <li><a href="../historia-programacao/index.html">História</a></li>
+                    <li><a href="../index.html#sobre">Sobre Nós</a></li>
                 </ul>
             </nav>
         </div>
