agora sim, finalizado

--- a/fortnite/index.html
+++ b/fortnite/index.html
@@ -46,28 +46,21 @@
                     <img src="images/1643312603cpp.png" alt="C++">
                     <div class="tech-info">
                         <h3>C++</h3>
-                        <p>Usado no motor do jogo para física, renderização e processamento em tempo real, garantindo jogabilidade fluida e desempenho elevado.</p>
+                        <p>Desenvolve o núcleo do jogo, garantindo alto desempenho e suporte a milhões de jogadores simultâneos.</p>
                     </div>
                 </div>
                 <div class="tech-card">
                     <img src="images/Unreal-Engine-Logo--Streamline-Logos.svg" alt="Unreal Engine">
                     <div class="tech-info">
                         <h3>Unreal Engine</h3>
-                        <p>Responsável pelo design do mundo, efeitos visuais, animações e suporte ao multiplayer em larga escala, proporcionando experiências imersivas.</p>
-                    </div>
-                </div>
-                <div class="tech-card">
-                    <img src="images/63065002cd563e1f8fcead3b_fdcad5ca.png" alt="C#">
-                    <div class="tech-info">
-                        <h3>C#</h3>
-                        <p>Usado em ferramentas de suporte, scripts internos e automação de sistemas, garantindo estabilidade e integração de funcionalidades do jogo.</p>
+                        <p>Responsável pelo motor gráfico, física realista e criação de mundos dinâmicos, proporcionando experiências imersivas.</p>
                     </div>
                 </div>
                 <div class="tech-card">
                     <img src="images/Python--Streamline-Font-Awesome.svg" alt="Python">
                     <div class="tech-info">
                         <h3>Python</h3>
-                        <p>Empregado em análises de dados, estatísticas de partidas e suporte a servidores para otimização de matchmaking e eventos temporários.</p>
+                        <p>Automatiza processos e ferramentas internas, facilitando o desenvolvimento e testes.</p>
                     </div>
                 </div>
             </div>
