alteração de link da história

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     desenvolvimento ágil e as inovações em <strong>Inteligência Artificial</strong> e <strong>Cloud
                         Gaming</strong>. Uma viagem essencial para quem ama games e código!
                 </p>
-                <a href="historia-jogos/index.html" class="btn-history">Descubra a História Completa <i
+                <a href="historia-programacao/index.html" class="btn-history">Descubra a História Completa <i
                         class="fas fa-arrow-right"></i></a>
             </div>
             <div class="history-image">
