posicionamento hero-section CS2

--- a/cs2/index.html
+++ b/cs2/index.html
@@ -38,7 +38,9 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    
+    <section>
         <h2 class="subtitle" id="tecnologias">Tecnologias</h2>
         <div class="technologies">
             <img src="/cs2/img/1643312603cpp.png" alt="C++" class="c-plusplus">
