adição de footers em todas as paginas

--- a/clash-royale/index.html
+++ b/clash-royale/index.html
@@ -151,5 +151,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>© 2025 Gamefy Code </p>
+    </footer>
 </body>
 </html>
