--- a/fortnite/index.html
+++ b/fortnite/index.html
@@ -150,5 +150,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>© 2025 Gamefy Code </p>
+    </footer>
 </body>
 </html>
