--- a/historia-programacao/index.html
+++ b/historia-programacao/index.html
@@ -134,6 +134,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>© 2025 Gamefy Code </p>
+    </footer>
 </body>
 
 </html>
