--- a/rocket-league/index.html
+++ b/rocket-league/index.html
@@ -180,5 +180,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>© 2025 Gamefy Code </p>
+    </footer>
 </body>
 </html>
